# particle-life-rs

./: Cargo.toml  LICENSE  README.md  TODO.md
src/: app.rs  counter.rs  hsv.rs  main.rs  particle.rs  particle_types.rs  preset.rs  universe.rs
